--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,8 @@ googleapis-common-protos==1.70.0
 gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
-mysqlclient==2.2.7
+psycopg2-binary==2.9.9
+dj-database-url==2.3.0
 oauthlib==3.3.1
 packaging==25.0
 pillow==11.3.0
