--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.9.1
 cachetools==5.5.2
 certifi==2025.8.3
 charset-normalizer==3.4.3
+dj-database-url==3.0.1
 Django==5.2.5
 django-widget-tweaks==1.5.0
 google-api-core==2.25.1
@@ -13,13 +14,14 @@ googleapis-common-protos==1.70.0
 gunicorn==23.0.0
 httplib2==0.22.0
 idna==3.10
-psycopg2-binary==2.9.9
-dj-database-url==2.3.0
+mysqlclient==2.2.7
 oauthlib==3.3.1
 packaging==25.0
 pillow==11.3.0
 proto-plus==1.26.1
 protobuf==6.32.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.3
